<resources>
    <string name="app_name">NotasApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login Fragment</string>
    <string name="sign_up_fragment_label">Register Fragment</string>
    <string name="txt_login">Iniciar Sesion</string>
    <string name="txt_email">Email</string>
    <string name="txt_pass">Password</string>
    <string name="txt_repeat_pass">Repeat Password</string>
    <string name="previous">Previous</string>

    <string name="txt_session">Iniciar Session</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>